Fix Cloudflare Pages deployment by separating configuration: - Remove unsupported fields from wrangler.toml - Create dedicated .cloudflare/pages.toml for Pages-specific build config

--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,14 +1,6 @@
+# Cloudflare Pages configuration
 name = "budgetbuddy"
 compatibility_date = "2025-03-24"
 
 # Output directory for Pages
 pages_build_output_dir = "dist"
-
-[build]
-command = "bun install && bun run build"
-
-[build.environment]
-NODE_VERSION = "20"
-
-[assets]
-directory = "./dist"
